# runpod-worker-nuextract3

./: Dockerfile  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  download_model.py  handler.py  pyproject.toml  requirements-test.txt  requirements.txt
.runpod/: hub.json  tests.json
src/nuextract_worker/: __init__.py  config.py  errors.py  media.py  model_manifest.py  runtime.py  schema.py  storage.py  worker.py
tests/: test_config.py  test_download_model.py  test_media.py  test_metadata.py  test_runtime.py  test_schema.py  test_storage.py  test_worker.py
